retrieving data from crossref; updating jupyter notebooks

--- a/querying_Unpaywall.ipynb
+++ b/querying_Unpaywall.ipynb
@@ -37,10 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: load and preprocess the crossref DOIs\n",
+    "### Step 2: loading crossref metadata\n",
     "\n",
-    "For the \n",
-    "Since we had to rely on searching for name variants in crossref, we have to postprocess the results to remove duplicates."
+    "First, we import the data we obtained by querying crossref."
    ]
   },
   {
