--- a/solution/querying_crossref.ipynb
+++ b/solution/querying_crossref.ipynb
@@ -101,67 +101,67 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'10.21203/rs.3.rs-38496/v1'</li><li>'10.3892/or.2019.7247'</li><li>'10.1145/2983323.2983807'</li><li>'10.21203/rs.3.rs-128597/v1'</li><li>'10.21203/rs.3.rs-716282/v1'</li><li>'10.21203/rs.3.rs-366917/v1'</li><li>'10.1145/2882903.2903736'</li><li>'10.1145/3364452.33644558'</li><li>'10.7238/a.v0i22.3214'</li><li>'10.1111/sms.13979'</li><li>'10.1080/03075079.2020.1739014'</li><li>'10.1080/13504851.2019.1610703'</li><li>'10.1145/3149485.3149492'</li><li>'10.1080/17565529.2019.1596063'</li><li>'10.2109/jcersj2.16126'</li><li>'10.2200/s01041ed1v01y202008mop005'</li><li>'10.1093/nar/gky710'</li><li>'10.1075/ijlcr.3.2.02bel'</li><li>'10.1002/cctc.202100856'</li><li>'10.1002/cne.25073'</li></ol>\n"
+       "<ol class=list-inline><li>'10.21203/rs.3.rs-38496/v1'</li><li>'10.3892/or.2019.7247'</li><li>'10.1145/2983323.2983807'</li><li>'10.21203/rs.3.rs-716282/v1'</li><li>'10.21203/rs.3.rs-128597/v1'</li><li>'10.21203/rs.3.rs-366917/v1'</li><li>'10.1145/2882903.2903736'</li><li>'10.1145/3364452.33644558'</li><li>'10.7238/a.v0i22.3214'</li><li>'10.1080/03075079.2020.1739014'</li><li>'10.1111/sms.13979'</li><li>'10.1080/13504851.2019.1610703'</li><li>'10.1080/17565529.2019.1596063'</li><li>'10.1145/3149485.3149492'</li><li>'10.2200/s01041ed1v01y202008mop005'</li><li>'10.1075/ijlcr.3.2.02bel'</li><li>'10.1093/nar/gky710'</li><li>'10.1002/cne.25073'</li><li>'10.2109/jcersj2.16126'</li><li>'10.1039/c6ra10501g'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item '10.21203/rs.3.rs-38496/v1'\n",
        "\\item '10.3892/or.2019.7247'\n",
        "\\item '10.1145/2983323.2983807'\n",
-       "\\item '10.21203/rs.3.rs-128597/v1'\n",
        "\\item '10.21203/rs.3.rs-716282/v1'\n",
+       "\\item '10.21203/rs.3.rs-128597/v1'\n",
        "\\item '10.21203/rs.3.rs-366917/v1'\n",
        "\\item '10.1145/2882903.2903736'\n",
        "\\item '10.1145/3364452.33644558'\n",
        "\\item '10.7238/a.v0i22.3214'\n",
-       "\\item '10.1111/sms.13979'\n",
        "\\item '10.1080/03075079.2020.1739014'\n",
+       "\\item '10.1111/sms.13979'\n",
        "\\item '10.1080/13504851.2019.1610703'\n",
-       "\\item '10.1145/3149485.3149492'\n",
        "\\item '10.1080/17565529.2019.1596063'\n",
-       "\\item '10.2109/jcersj2.16126'\n",
+       "\\item '10.1145/3149485.3149492'\n",
        "\\item '10.2200/s01041ed1v01y202008mop005'\n",
-       "\\item '10.1093/nar/gky710'\n",
        "\\item '10.1075/ijlcr.3.2.02bel'\n",
-       "\\item '10.1002/cctc.202100856'\n",
+       "\\item '10.1093/nar/gky710'\n",
        "\\item '10.1002/cne.25073'\n",
+       "\\item '10.2109/jcersj2.16126'\n",
+       "\\item '10.1039/c6ra10501g'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. '10.21203/rs.3.rs-38496/v1'\n",
        "2. '10.3892/or.2019.7247'\n",
        "3. '10.1145/2983323.2983807'\n",
-       "4. '10.21203/rs.3.rs-128597/v1'\n",
-       "5. '10.21203/rs.3.rs-716282/v1'\n",
+       "4. '10.21203/rs.3.rs-716282/v1'\n",
+       "5. '10.21203/rs.3.rs-128597/v1'\n",
        "6. '10.21203/rs.3.rs-366917/v1'\n",
        "7. '10.1145/2882903.2903736'\n",
        "8. '10.1145/3364452.33644558'\n",
        "9. '10.7238/a.v0i22.3214'\n",
-       "10. '10.1111/sms.13979'\n",
-       "11. '10.1080/03075079.2020.1739014'\n",
+       "10. '10.1080/03075079.2020.1739014'\n",
+       "11. '10.1111/sms.13979'\n",
        "12. '10.1080/13504851.2019.1610703'\n",
-       "13. '10.1145/3149485.3149492'\n",
-       "14. '10.1080/17565529.2019.1596063'\n",
-       "15. '10.2109/jcersj2.16126'\n",
-       "16. '10.2200/s01041ed1v01y202008mop005'\n",
+       "13. '10.1080/17565529.2019.1596063'\n",
+       "14. '10.1145/3149485.3149492'\n",
+       "15. '10.2200/s01041ed1v01y202008mop005'\n",
+       "16. '10.1075/ijlcr.3.2.02bel'\n",
        "17. '10.1093/nar/gky710'\n",
-       "18. '10.1075/ijlcr.3.2.02bel'\n",
-       "19. '10.1002/cctc.202100856'\n",
-       "20. '10.1002/cne.25073'\n",
+       "18. '10.1002/cne.25073'\n",
+       "19. '10.2109/jcersj2.16126'\n",
+       "20. '10.1039/c6ra10501g'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        " [1] \"10.21203/rs.3.rs-38496/v1\"         \"10.3892/or.2019.7247\"             \n",
-       " [3] \"10.1145/2983323.2983807\"           \"10.21203/rs.3.rs-128597/v1\"       \n",
-       " [5] \"10.21203/rs.3.rs-716282/v1\"        \"10.21203/rs.3.rs-366917/v1\"       \n",
+       " [3] \"10.1145/2983323.2983807\"           \"10.21203/rs.3.rs-716282/v1\"       \n",
+       " [5] \"10.21203/rs.3.rs-128597/v1\"        \"10.21203/rs.3.rs-366917/v1\"       \n",
        " [7] \"10.1145/2882903.2903736\"           \"10.1145/3364452.33644558\"         \n",
-       " [9] \"10.7238/a.v0i22.3214\"              \"10.1111/sms.13979\"                \n",
-       "[11] \"10.1080/03075079.2020.1739014\"     \"10.1080/13504851.2019.1610703\"    \n",
-       "[13] \"10.1145/3149485.3149492\"           \"10.1080/17565529.2019.1596063\"    \n",
-       "[15] \"10.2109/jcersj2.16126\"             \"10.2200/s01041ed1v01y202008mop005\"\n",
-       "[17] \"10.1093/nar/gky710\"                \"10.1075/ijlcr.3.2.02bel\"          \n",
-       "[19] \"10.1002/cctc.202100856\"            \"10.1002/cne.25073\"                "
+       " [9] \"10.7238/a.v0i22.3214\"              \"10.1080/03075079.2020.1739014\"    \n",
+       "[11] \"10.1111/sms.13979\"                 \"10.1080/13504851.2019.1610703\"    \n",
+       "[13] \"10.1080/17565529.2019.1596063\"     \"10.1145/3149485.3149492\"          \n",
+       "[15] \"10.2200/s01041ed1v01y202008mop005\" \"10.1075/ijlcr.3.2.02bel\"          \n",
+       "[17] \"10.1093/nar/gky710\"                \"10.1002/cne.25073\"                \n",
+       "[19] \"10.2109/jcersj2.16126\"             \"10.1039/c6ra10501g\"               "
       ]
      },
      "metadata": {},
@@ -180,23 +180,23 @@
        "\t<tr><th scope=row>1</th><td>2020, 7, 15</td></tr>\n",
        "\t<tr><th scope=row>2</th><td>2019, 7, 24</td></tr>\n",
        "\t<tr><th scope=row>3</th><td>2016, 10, 24</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>2020, 12, 31</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>2021, 8, 13</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>2021, 8, 13</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>2020, 12, 31</td></tr>\n",
        "\t<tr><th scope=row>6</th><td>2021, 4, 6</td></tr>\n",
        "\t<tr><th scope=row>7</th><td>2016, 6, 14</td></tr>\n",
        "\t<tr><th scope=row>8</th><td>2019, 12, 12</td></tr>\n",
        "\t<tr><th scope=row>9</th><td>2018, 11, 15</td></tr>\n",
-       "\t<tr><th scope=row>10</th><td>2021, 5, 24</td></tr>\n",
-       "\t<tr><th scope=row>11</th><td>2020, 3, 12</td></tr>\n",
+       "\t<tr><th scope=row>10</th><td>2020, 3, 12</td></tr>\n",
+       "\t<tr><th scope=row>11</th><td>2021, 5, 24</td></tr>\n",
        "\t<tr><th scope=row>12</th><td>2019, 4, 26</td></tr>\n",
-       "\t<tr><th scope=row>13</th><td>2018, 1, 11</td></tr>\n",
-       "\t<tr><th scope=row>14</th><td>2019, 4, 6</td></tr>\n",
-       "\t<tr><th scope=row>15</th><td>2016</td></tr>\n",
-       "\t<tr><th scope=row>16</th><td>2021, 3, 15</td></tr>\n",
+       "\t<tr><th scope=row>13</th><td>2019, 4, 6</td></tr>\n",
+       "\t<tr><th scope=row>14</th><td>2018, 1, 11</td></tr>\n",
+       "\t<tr><th scope=row>15</th><td>2021, 3, 15</td></tr>\n",
+       "\t<tr><th scope=row>16</th><td>2017, 12, 4</td></tr>\n",
        "\t<tr><th scope=row>17</th><td>2018, 8, 8</td></tr>\n",
-       "\t<tr><th scope=row>18</th><td>2017, 12, 4</td></tr>\n",
-       "\t<tr><th scope=row>19</th><td>2021, 8, 3</td></tr>\n",
-       "\t<tr><th scope=row>20</th><td>2020, 12, 3</td></tr>\n",
+       "\t<tr><th scope=row>18</th><td>2020, 12, 3</td></tr>\n",
+       "\t<tr><th scope=row>19</th><td>2016</td></tr>\n",
+       "\t<tr><th scope=row>20</th><td>2016</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -209,23 +209,23 @@
        "\t1 & 2020, 7, 15\\\\\n",
        "\t2 & 2019, 7, 24\\\\\n",
        "\t3 & 2016, 10, 24\\\\\n",
-       "\t4 & 2020, 12, 31\\\\\n",
-       "\t5 & 2021, 8, 13\\\\\n",
+       "\t4 & 2021, 8, 13\\\\\n",
+       "\t5 & 2020, 12, 31\\\\\n",
        "\t6 & 2021, 4, 6\\\\\n",
        "\t7 & 2016, 6, 14\\\\\n",
        "\t8 & 2019, 12, 12\\\\\n",
        "\t9 & 2018, 11, 15\\\\\n",
-       "\t10 & 2021, 5, 24\\\\\n",
-       "\t11 & 2020, 3, 12\\\\\n",
+       "\t10 & 2020, 3, 12\\\\\n",
+       "\t11 & 2021, 5, 24\\\\\n",
        "\t12 & 2019, 4, 26\\\\\n",
-       "\t13 & 2018, 1, 11\\\\\n",
-       "\t14 & 2019, 4, 6\\\\\n",
-       "\t15 & 2016\\\\\n",
-       "\t16 & 2021, 3, 15\\\\\n",
+       "\t13 & 2019, 4, 6\\\\\n",
+       "\t14 & 2018, 1, 11\\\\\n",
+       "\t15 & 2021, 3, 15\\\\\n",
+       "\t16 & 2017, 12, 4\\\\\n",
        "\t17 & 2018, 8, 8\\\\\n",
-       "\t18 & 2017, 12, 4\\\\\n",
-       "\t19 & 2021, 8, 3\\\\\n",
-       "\t20 & 2020, 12, 3\\\\\n",
+       "\t18 & 2020, 12, 3\\\\\n",
+       "\t19 & 2016\\\\\n",
+       "\t20 & 2016\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -237,23 +237,23 @@
        "| 1 | 2020, 7, 15 |\n",
        "| 2 | 2019, 7, 24 |\n",
        "| 3 | 2016, 10, 24 |\n",
-       "| 4 | 2020, 12, 31 |\n",
-       "| 5 | 2021, 8, 13 |\n",
+       "| 4 | 2021, 8, 13 |\n",
+       "| 5 | 2020, 12, 31 |\n",
        "| 6 | 2021, 4, 6 |\n",
        "| 7 | 2016, 6, 14 |\n",
        "| 8 | 2019, 12, 12 |\n",
        "| 9 | 2018, 11, 15 |\n",
-       "| 10 | 2021, 5, 24 |\n",
-       "| 11 | 2020, 3, 12 |\n",
+       "| 10 | 2020, 3, 12 |\n",
+       "| 11 | 2021, 5, 24 |\n",
        "| 12 | 2019, 4, 26 |\n",
-       "| 13 | 2018, 1, 11 |\n",
-       "| 14 | 2019, 4, 6 |\n",
-       "| 15 | 2016 |\n",
-       "| 16 | 2021, 3, 15 |\n",
+       "| 13 | 2019, 4, 6 |\n",
+       "| 14 | 2018, 1, 11 |\n",
+       "| 15 | 2021, 3, 15 |\n",
+       "| 16 | 2017, 12, 4 |\n",
        "| 17 | 2018, 8, 8 |\n",
-       "| 18 | 2017, 12, 4 |\n",
-       "| 19 | 2021, 8, 3 |\n",
-       "| 20 | 2020, 12, 3 |\n",
+       "| 18 | 2020, 12, 3 |\n",
+       "| 19 | 2016 |\n",
+       "| 20 | 2016 |\n",
        "\n"
       ],
       "text/plain": [
@@ -261,23 +261,23 @@
        "1  2020, 7, 15 \n",
        "2  2019, 7, 24 \n",
        "3  2016, 10, 24\n",
-       "4  2020, 12, 31\n",
-       "5  2021, 8, 13 \n",
+       "4  2021, 8, 13 \n",
+       "5  2020, 12, 31\n",
        "6  2021, 4, 6  \n",
        "7  2016, 6, 14 \n",
        "8  2019, 12, 12\n",
        "9  2018, 11, 15\n",
-       "10 2021, 5, 24 \n",
-       "11 2020, 3, 12 \n",
+       "10 2020, 3, 12 \n",
+       "11 2021, 5, 24 \n",
        "12 2019, 4, 26 \n",
-       "13 2018, 1, 11 \n",
-       "14 2019, 4, 6  \n",
-       "15 2016        \n",
-       "16 2021, 3, 15 \n",
+       "13 2019, 4, 6  \n",
+       "14 2018, 1, 11 \n",
+       "15 2021, 3, 15 \n",
+       "16 2017, 12, 4 \n",
        "17 2018, 8, 8  \n",
-       "18 2017, 12, 4 \n",
-       "19 2021, 8, 3  \n",
-       "20 2020, 12, 3 "
+       "18 2020, 12, 3 \n",
+       "19 2016        \n",
+       "20 2016        "
       ]
      },
      "metadata": {},
@@ -357,16 +357,16 @@
     {
      "data": {
       "text/html": [
-       "51381"
+       "51544"
       ],
       "text/latex": [
-       "51381"
+       "51544"
       ],
       "text/markdown": [
-       "51381"
+       "51544"
       ],
       "text/plain": [
-       "[1] 51381"
+       "[1] 51544"
       ]
      },
      "metadata": {},
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +428,145 @@
     "#                     resource_type = list(results$message$items$type))))\n",
     "#  next_cursor <- results$message$`next-cursor`\n",
     "#}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCISE: try the package rcrossref\n",
+    "\n",
+    "*rcrossref* is an R package specifically for using the crossref API. Crossref holds a lot of metadata about various aspects of scholarly publication. For example, crossref offers citation counts for works, based on reference matching within its holdings. \n",
+    "\n",
+    "The availability of this information depends on members choosing to add references upon metadata creation. Citation information is also less complete compared to other bibliometric databases. However, opening up citation information is a major issue in bibliometric research, and therefore will hopefully grow in the future.\n",
+    "\n",
+    "The function *cr_citation_count* works in a similar way to what we did above. The function takes a vector of dois, and returns a dataframe with citation counts provided by crossref.\n",
+    "\n",
+    "Below, we first install and load *rcrossref*. Then, we load a sample of 50 DOIs and retrieve citation counts from crossref.\n",
+    "\n",
+    "**Have a look at the result.**\n",
+    "* What is the average citation count of this sample?\n",
+    "* What publication has the highest citation count?\n",
+    "* Try to access that publication. Can you open and read it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'rcrossref' was built under R version 4.0.5\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#install.packages(\"rcrossref\")\n",
+    "library(rcrossref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the sample DOIs\n",
+    "DOI_sample <- read.csv(\"../data/DOI_sample.csv\", row.names = \"X\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                           doi count\n",
+      "1                                           10.3139/104.111575     2\n",
+      "2                                           10.3139/104.111560     1\n",
+      "3                                           10.3139/104.111574     0\n",
+      "4                                               10.3852/15-254     7\n",
+      "5                                           10.1130/ges02032.1     4\n",
+      "6                                       10.1055/s-0037-1598699     1\n",
+      "7                                       10.1055/s-0036-1594189     0\n",
+      "8                                      10.1515/cdbme-2017-0005     8\n",
+      "9                                        10.1515/zwf-2021-0045     0\n",
+      "10                                    10.1177/0269881115609072    73\n",
+      "11                                      10.1002/chem.201603098    14\n",
+      "12                                      10.1002/ange.201803136    40\n",
+      "13                                      10.1055/s-0038-1668731     0\n",
+      "14                                    10.1093/eurheartj/ehz540     0\n",
+      "15                               10.1093/eurheartj/ehz748.0501     0\n",
+      "16                                            10.1002/pip.2725    17\n",
+      "17                                   10.22331/q-2021-03-23-417     2\n",
+      "18                           10.1200/jco.2016.34.15_suppl.5005     1\n",
+      "19                                          10.3139/104.111561     2\n",
+      "20                                          10.3139/104.112098     0\n",
+      "21                                          10.3139/104.111918     1\n",
+      "22                                          10.1111/apha.13701     0\n",
+      "23                                      10.1055/s-0038-1671328     0\n",
+      "24 10.1164/ajrccm-conference.2020.201.1_meetingabstracts.a5255     0\n",
+      "25                                 10.1563/aaid-joi-d-16-00065     5\n",
+      "26                                      10.1055/s-0039-1693665     0\n",
+      "27                                    10.1021/acsomega.9b04371     7\n",
+      "28                                         10.1055/a-0829-6580     1\n",
+      "29                                   10.1109/eptc.2017.8277550     1\n",
+      "30                                10.1182/blood-2018-99-116652     1\n",
+      "31                                     10.1145/3341105.3373909     7\n",
+      "32                                          10.1111/head.13278     1\n",
+      "33                                      10.25039/x44.2017.op39     0\n",
+      "34                             10.1200/jco.2017.35.7_suppl.134     0\n",
+      "35                                    10.1515/bejeap-2020-0084     1\n",
+      "36                                         10.1055/a-1301-8852     0\n",
+      "37                            10.1109/icassp40776.2020.9054411     0\n",
+      "38                                     10.1145/3434770.3459736     0\n",
+      "39                                     10.1093/ndt/gfab128.003     0\n",
+      "40                                        10.1128/jvi.00351-16    15\n",
+      "41                                10.1302/0301-620x.98b1.36347    26\n",
+      "42                                       10.1093/icvts/ivaa235     0\n",
+      "43                                    10.1177/1747021818769259     3\n",
+      "44                                  10.21203/rs.3.rs-122548/v1     1\n",
+      "45                                          10.1039/c5cc01488c    22\n",
+      "46                                      10.1002/pssa.201532819     2\n",
+      "47                                      10.1093/cvr/cvy060.413     0\n",
+      "48                                           10.1116/1.4965883    14\n",
+      "49                                           10.1111/aor.12725     9\n",
+      "50                                             10.1002/cpcy.20     3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. \n",
+       "   0.00    0.00    1.00    5.84    6.50   73.00 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create a data frame for storing the results\n",
+    "DF_citations <- data.frame(c(doi = character(),\n",
+    "                             count = numeric()))\n",
+    "\n",
+    "# iterate through the sample DOIs and retrieve citation information\n",
+    "for (i in 1:nrow(DOI_sample)) {\n",
+    "    tryCatch(\n",
+    "        {DF_citations <- rbind(DF_citations, cr_citation_count(doi = DOI_sample[i,]))},\n",
+    "        error = function(e) {print(\"No citations found.\")}\n",
+    "    )\n",
+    "}\n",
+    "                           \n",
+    "print(DF_citations)\n",
+    "summary(DF_citations$count)"
    ]
   }
  ],
